// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new training events should call correct callback after change input 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      1,
      "name",
      "Dumbbel Press",
    ],
  ],
}
`;

exports[`new training events should call correct callback after change title 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Chest",
    ],
  ],
}
`;

exports[`new training events should call correct callback after click on remove button 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      1,
    ],
  ],
}
`;

exports[`new training exercise fields component should render as expected 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_name_undefined"
    >
      Name
    </label>
    <input
      id="exercise_name_undefined"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_set_undefined"
    >
      Set
    </label>
    <input
      id="exercise_set_undefined"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_repetition_undefined"
    >
      Repetition
    </label>
    <input
      id="exercise_repetition_undefined"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_weight_undefined"
    >
      Weight
    </label>
    <input
      id="exercise_weight_undefined"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_youtube_undefined"
    >
      Youtube
    </label>
    <input
      id="exercise_youtube_undefined"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <button
      className="remove"
      onClick={[Function]}
      type="button"
    >
      Remove
    </button>
  </div>
</div>
`;

exports[`new training new training component should render as expected 1`] = `
<NewTraining
  exerciseList={Array []}
  title=""
>
  <div>
    <h1>
      Register a new training
    </h1>
    <form
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="title"
        >
          Title
        </label>
        <input
          id="title"
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          className="add"
          id="add"
          type="button"
        >
          Add Exercise
        </button>
      </div>
      <input
        type="submit"
        value="Register it!"
      />
    </form>
  </div>
</NewTraining>
`;
